Crash on rendering when a python function with GPUOffScreen objects is attached to a frame change handler #77032

Closed
opened 2020-05-24 20:41:59 +02:00 by Paul Jadoul · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.74

Blender Version
Broken: version: 2.90 (sub 3), branch: master, commit date: 2020-05-23 21:58, hash: 525fc36a80

Short description of error
When a script with a GPUOffScreen objects is running on a frame change handler, everething is working fine until we render an image. That crashes Blender with that log :

Error : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FFB44A59248
Module : MSVCP140.dll
Thread : 00001124

Exact steps for others to reproduce the error
Run this script (reduced to the essential to reproduce the crash), than hit F12

  import bpy
  import gpu
  def update(self):
      offscreen = gpu.types.GPUOffScreen(100, 100)
   
  bpy.app.handlers.frame_change_post.append(update)
**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.74 **Blender Version** Broken: version: 2.90 (sub 3), branch: master, commit date: 2020-05-23 21:58, hash: `525fc36a80` **Short description of error** When a script with a GPUOffScreen objects is running on a frame change handler, everething is working fine until we render an image. That crashes Blender with that log : Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FFB44A59248 Module : MSVCP140.dll Thread : 00001124 **Exact steps for others to reproduce the error** Run this script (reduced to the essential to reproduce the crash), than hit F12 ``` import bpy import gpu ``` ``` def update(self): offscreen = gpu.types.GPUOffScreen(100, 100) bpy.app.handlers.frame_change_post.append(update) ```
Author

Added subscriber: @Mixsoupe

Added subscriber: @Mixsoupe

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

There are two problems here.

  • One is that there is no GPUContext active to be used in this context.
  • The other is that the method for creating GPUOffscreen does not check if there is an active context.

Activating a GPU context in this situation would be complicated, because this callback does not always require it. And it would be an unnecessary overhead for most cases.
Exposing this function to activate context in Python is also a little dangerous.
And with the Render API for python we can work around this problem.

So to solve this, I believe that raising an error in python is enough.

There are two problems here. - One is that there is no GPUContext active to be used in this context. - The other is that the method for creating GPUOffscreen does not check if there is an active context. Activating a GPU context in this situation would be complicated, because this callback does not always require it. And it would be an unnecessary overhead for most cases. Exposing this function to activate context in Python is also a little dangerous. And with the Render API for python we can work around this problem. So to solve this, I believe that raising an error in python is enough.

This issue was referenced by 4102e7ed81

This issue was referenced by 4102e7ed81cb2c98dc0ade362f47843c7c13b5a7

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-05-26 16:38:44 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77032
No description provided.