Fix T77032: Crash when creating GPUOffscreen without GPUContext in Python